# bowshockpy

./: .gitignore  .readthedocs.yaml  7  CONTRIBUTING.md  README.md  bowshock_fitter.py  bowshock_fitter.sh  bowshock_params.py  bowshock_params_L1448.py  generate_bowshock.py  generate_bowshock_L1448.py  prueba_params.py  pyproject.toml  requirements.txt  setup.py  todo.ignore
.github/workflows/: draft-pdf.yml  tests.yml
bowpy/: bs.py  bsmodels.py  bsutils.py  comass.py  header_default.txt  utils.py  viewutils.py
bowshockpy/: __init__.py  _old_radtrans.py  bsmodels.py  bsutils.py  cube.py  cubemass.py  cubeproc.py  genbow.py  header_default.txt  modelproj.py  models.py  moments.py  plots.py  radtrans.py  radtrans_linearmol.py  rotlinearmol.py  utils.py  viewutils.py
bowshockpy/inputfiles/: example1.py  example2.py  example3.py  example4.py  example5.py
docs/: requirements.txt
docs/source/: api.rst  citation.rst  comass.rst  conf.py  description.rst  example_module.ipynb  examples_inputfile.rst  examples_module.ipynb  index.rst  inputparams.rst  installation.rst  modelandworkflow.rst  outputs.rst  usage.rst
docs/source/api/: index.rst  models.rst  moments.rst  plots.rst  radtrans.rst  utils.rst
docs/source/examples/: example_module.ipynb  examples_inputfile.rst  index.rst  notebook_tutorial.ipynb
examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example_module.ipynb
joss/: paper.bib  paper.crossref  paper.md
paper/: paper.bib  paper.crossref  paper.md
tests/: test_bsmodels.py  test_cubes.py  test_models.py  test_radtrans.py
(+15 files in other folders)
