[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bowshockpy"
# version = 
requires-python = ">=3.9"
authors = [{name = "Guillermo Blazquez-Calero", email = "gblazquez@iaa.es"}]
description = "A Python package for generating spectral channel maps of a jet-driven bowshock model"
readme = "README.md"
license = "MIT"
dynamic = ["version", "maintainers", "scripts", "dependencies"]

[project.urls]
Homepage = "https://github.com/gblazquez/bowshockpy"
Documentation = "https://bowshockpy.readthedocs.io/en/latest/"
Repository = "https://github.com/gblazquez/bowshockpy"
